modify readme on the jaxb issue