@@ -3,6 +3,7 @@
 ### Installation 
 
 Create a Spring Boot Application via [Spring Initializer] (https://start.spring.io/).
+
 Switch to Full Version on Configurations
 Checked the following
 ```
@@ -13,6 +14,11 @@ Actuator
 ```
 
 Import to Eclipse/IntelliJ via Maven Project and Run
+
+[Note](https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j): Add the following options if using Java 9
+```
+--add-modules java.xml.bind
+```
 
 Hit the [server](http://localhost:8080/actuator) to see if its working
 
